--- a/src/main/webapp/org/cboard/view/cboard/changePwd.html
+++ b/src/main/webapp/org/cboard/view/cboard/changePwd.html
@@ -1,17 +1,17 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close()">
         <span aria-hidden="true">×</span></button>
-    <h4 class="modal-title">Change Password</h4>
+    <h4 class="modal-title">修改密码</h4>
 </div>
 <div class="modal-body">
     <div class="form-group has-feedback">
-        <input type="password" class="form-control" ng-model="curPwd" placeholder="Current Password">
+        <input type="password" class="form-control" ng-model="curPwd" placeholder="旧密码">
     </div>
     <div class="form-group has-feedback">
-        <input type="password" class="form-control" ng-model="newPwd" placeholder="New Password">
+        <input type="password" class="form-control" ng-model="newPwd" placeholder="新密码">
     </div>
     <div class="form-group has-feedback">
-        <input type="password" class="form-control" ng-model="cfmPwd" placeholder="Confirm Password">
+        <input type="password" class="form-control" ng-model="cfmPwd" placeholder="确认密码">
     </div>
 </div>
 <div class="modal-footer">
