--- a/src/main/webapp/org/cboard/view/config/datasource/edit.html
+++ b/src/main/webapp/org/cboard/view/config/datasource/edit.html
@@ -14,7 +14,7 @@
 <div ng-include="dsView"></div>
 </div>
 <div class="form-group">
-    <button type="submit" class="btn btn-danger pull-right">{{'COMMON.CANCEL'|translate}}</button>
-    <button type="submit" ng-click="saveEdit()" class="btn btn-success pull-right" style="margin-right: 5px">{{'COMMON.SAVE'|translate}}</button>
-    <button type="submit" ng-click="test()" class="btn btn-success pull-right" style="margin-right: 5px">{{'CONFIG.DATA_SOURCE.TEST'|translate}}</button>
+    <button type="submit" class="btn btn-link pull-right">{{'COMMON.CANCEL'|translate}}</button>
+    <button type="submit" ng-click="saveEdit()" class="btn btn-link pull-right" style="margin-right: 5px">{{'COMMON.SAVE'|translate}}</button>
+    <button type="submit" ng-click="test()" class="btn btn-link pull-right" style="margin-right: 5px">{{'CONFIG.DATA_SOURCE.TEST'|translate}}</button>
 </div>
