--- a/src/main/webapp/org/cboard/view/config/modal/job/edit.html
+++ b/src/main/webapp/org/cboard/view/config/modal/job/edit.html
@@ -18,7 +18,7 @@
                 </select>
             </div>
             <div class="col-sm-3">
-                <button type="button" class="btn btn-primary" ng-click="config()">{{'CONFIG.JOB.CONFIG'|translate}}</button>
+                <button type="button" class="btn btn-link" ng-click="config()">{{'CONFIG.JOB.CONFIG'|translate}}</button>
             </div>
         </div>
         <div class="form-group">
