--- a/src/main/webapp/org/cboard/view/config/shareResource.html
+++ b/src/main/webapp/org/cboard/view/config/shareResource.html
@@ -34,7 +34,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10" style="padding-right: 0px; padding-top: 5px">
-                            <button type="submit" ng-click="grantRes()" class="btn btn-success pull-right">
+                            <button type="submit" ng-click="grantRes()" class="btn btn-link pull-right">
                                 {{'CONFIG.SHARE_RES.SHARE'|translate}}
                             </button>
                         </div>
