--- a/src/main/webapp/org/cboard/view/config/category.html
+++ b/src/main/webapp/org/cboard/view/config/category.html
@@ -55,8 +55,8 @@
                         </div>
                     </div>
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-danger pull-right">{{'COMMON.CANCEL'|translate}}</button>
-                        <button type="submit" ng-click="save()" class="btn btn-success pull-right" style="margin-right: 5px">{{'COMMON.SAVE'|translate}}</button>
+                        <button type="submit" class="btn btn-link pull-right">{{'COMMON.CANCEL'|translate}}</button>
+                        <button type="submit" ng-click="save()" class="btn btn-link pull-right" style="margin-right: 5px">{{'COMMON.SAVE'|translate}}</button>
                     </div>
                 </form>
             </div>
