--- a/src/main/webapp/org/cboard/view/config/dataset.html
+++ b/src/main/webapp/org/cboard/view/config/dataset.html
@@ -69,16 +69,21 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <div class="col-sm-offset-2 col-sm-2">
-                                            <button type="button" class="btn btn-block btn-success"
+                                        <div class="col-sm-offset-2">
+                                            <button type="button" class="btn btn-link"
                                                     ng-click="loadData()">{{'CONFIG.DATASET.LOAD_DATA'|translate}}
                                             </button>
+                                            <a class="btn btn-link">
+                                                <label>
+                                                    <input type="checkbox" ng-model="loadFromCache"> {{'CONFIG.WIDGET.FROM_CACHE'|translate}}
+                                                </label>
+                                            </a>
                                         </div>
-                                        <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">
-                                            <label>
-                                                <input type="checkbox" ng-model="loadFromCache"> {{'CONFIG.WIDGET.FROM_CACHE'|translate}}
-                                            </label>
-                                        </div>
+                                        <!--<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">-->
+                                            <!--<label>-->
+                                                <!--<input type="checkbox" ng-model="loadFromCache"> {{'CONFIG.WIDGET.FROM_CACHE'|translate}}-->
+                                            <!--</label>-->
+                                        <!--</div>-->
                                     </div>
                                 </div>
                             </div>
@@ -223,8 +228,8 @@
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
-                    <button type="submit" class="btn btn-danger pull-right">{{'COMMON.CANCEL'|translate}}</button>
-                    <button type="submit" ng-click="save()" class="btn btn-success pull-right"
+                    <button type="submit" class="btn btn-link pull-right">{{'COMMON.CANCEL'|translate}}</button>
+                    <button type="submit" ng-click="save()" class="btn btn-link pull-right"
                             style="margin-right: 5px">{{'COMMON.SAVE'|translate}}
                     </button>
                     <div class="row">
