--- a/src/main/webapp/org/cboard/view/config/modal/job/mail.html
+++ b/src/main/webapp/org/cboard/view/config/modal/job/mail.html
@@ -31,7 +31,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-2">
-                <button type="button" class="btn btn-success" ng-click="addBoard()">{{'CONFIG.JOB.ADD_DASHBOARD'|translate}}</button>
+                <button type="button" class="btn btn-link" ng-click="addBoard()">{{'CONFIG.JOB.ADD_DASHBOARD'|translate}}</button>
             </div>
         </div>
         <div class="form-group">
