--- a/src/main/webapp/org/cboard/view/config/widget.html
+++ b/src/main/webapp/org/cboard/view/config/widget.html
@@ -5,26 +5,33 @@
         <div class="col-md-3">
             <div class="box box-solid" ng-class="{true:'collapsed-box'}[schema?true:false]">
                 <div class="box-header with-border">
-                    <i class="fa fa-bar-chart-o"></i> <h3 class="box-title"> {{'CONFIG.WIDGET.WIDGET'|translate}}</h3>
+                    <i class="fa fa-bar-chart-o"></i>
+                    <h3 class="box-title"> {{'CONFIG.WIDGET.WIDGET'|translate}}</h3>
                     <div class="box-tools pull-right">
                         <i class="fa fa-plus toolbar-icon" ng-click="newWgt()" title="{{'COMMON.NEW'|translate}}"></i>&nbsp;&nbsp;
-                        <i class="fa fa-copy toolbar-icon" ng-click="copyNode()" title="{{'COMMON.COPY'|translate}}"></i>&nbsp;&nbsp;
-                        <i class="fa fa-edit toolbar-icon" ng-click="editNode()" title="{{'COMMON.EDIT'|translate}}"></i>&nbsp;&nbsp;
-                        <i class="fa fa-trash-o toolbar-icon"  ng-click="deleteNode()" title="{{'COMMON.DELETE'|translate}}"></i>&nbsp;&nbsp;
+                        <i class="fa fa-copy toolbar-icon" ng-click="copyNode()"
+                           title="{{'COMMON.COPY'|translate}}"></i>&nbsp;&nbsp;
+                        <i class="fa fa-edit toolbar-icon" ng-click="editNode()"
+                           title="{{'COMMON.EDIT'|translate}}"></i>&nbsp;&nbsp;
+                        <i class="fa fa-trash-o toolbar-icon" ng-click="deleteNode()"
+                           title="{{'COMMON.DELETE'|translate}}"></i>&nbsp;&nbsp;
                         <i class="fa fa-reorder toolbar-icon" data-widget="collapse"></i>
                     </div>
                 </div>
                 <div class="box-body">
-                    <input type="text" class="form-control" placeholder="Search" ng-model="keywords" ng-change="searchNode()" title="dsr:kylin ds:Bill wg:test">
+                    <input type="text" class="form-control" placeholder="Search" ng-model="keywords"
+                           ng-change="searchNode()" title="dsr:kylin ds:Bill wg:test">
                     <div class="panel-body">
-                        <div id="widgetTreeID" js-tree="treeConfig" should-apply="applyModelChanges()" ng-model="treeData" tree="treeInstance"
+                        <div id="widgetTreeID" js-tree="treeConfig" should-apply="applyModelChanges()"
+                             ng-model="treeData" tree="treeInstance"
                              tree-events-obj="treeEventsObj"></div>
                     </div>
                 </div>
             </div>
             <div class="box box-solid" ng-if="schema">
                 <div class="box-header with-border">
-                    <i class="fa fa-cube"></i> <h3 class="box-title"> {{'CONFIG.DATASET.DATASET'|translate}}</h3>
+                    <i class="fa fa-cube"></i>
+                    <h3 class="box-title"> {{'CONFIG.DATASET.DATASET'|translate}}</h3>
                     <div class="box-tools pull-right">
                         <i class="fa fa-reorder toolbar-icon" data-widget="collapse"></i>
                     </div>
@@ -80,26 +87,31 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <div class="col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 col-lg-2">
-                                            <a class="btn btn-block btn-success" ng-click="customDs=!customDs">
+                                        <div class="col-sm-offset-2 col-sm-10">
+                                            <!--<div class="col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 col-lg-2">-->
+                                            <a class="btn btn-link" ng-click="customDs=!customDs">
                                                 <i class="fa fa-fw {{customDs?'fa-table':'fa-edit'}}"></i>{{(customDs?'CONFIG.WIDGET.EXIST_QUERY':'CONFIG.WIDGET.NEW_QUERY')|translate}}
                                             </a>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">
-                                            <button type="button" class="btn btn-block btn-success" ng-click="loadData()">
+                                            <!--</div>-->
+                                            <!--<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">-->
+                                            <button type="button" class="btn btn-link" ng-click="loadData()">
                                                 {{'CONFIG.WIDGET.LOAD_DATA'|translate}}
                                             </button>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">
-                                            <label>
-                                                <input type="checkbox" ng-model="loadFromCache"> {{'CONFIG.WIDGET.FROM_CACHE'|translate}}
-                                            </label>
+                                            <!--</div>-->
+                                            <!--<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2">-->
+                                            <a class="btn btn-link">
+                                                <label>
+                                                    <input type="checkbox" ng-model="loadFromCache">
+                                                    {{'CONFIG.WIDGET.FROM_CACHE'|translate}}
+                                                </label>
+                                            </a>
+                                            <!--</div>-->
                                         </div>
                                     </div>
                                     <div class="form-group" ng-repeat="alert in alerts">
                                         <div class="col-sm-offset-2 col-sm-10">
                                             <div uib-alert ng-class="'alert-' + (alert.type || 'warning')"
-                                            close="alerts.splice($index, 1)">{{alert.msg}}
+                                                 close="alerts.splice($index, 1)">{{alert.msg}}
                                             </div>
                                         </div>
                                     </div>
@@ -108,10 +120,12 @@
                             <hr/>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="form-group" ng-class="{'has-error': !(verify.widgetName || widgetName.length)}">
+                                    <div class="form-group"
+                                         ng-class="{'has-error': !(verify.widgetName || widgetName.length)}">
                                         <label class="col-sm-2 control-label">{{'CONFIG.WIDGET.WIDGET_NAME'|translate}}</label>
                                         <div class="col-sm-10">
-                                            <input id="widgetName" ng-model="widgetName" class="form-control col-sm-10" placeholder="{{'CONFIG.WIDGET.CATEGORY'|translate}}/{{'CONFIG.WIDGET.WIDGET_NAME'|translate}}"/>
+                                            <input id="widgetName" ng-model="widgetName" class="form-control col-sm-10"
+                                                   placeholder="{{'CONFIG.WIDGET.CATEGORY'|translate}}/{{'CONFIG.WIDGET.WIDGET_NAME'|translate}}"/>
                                         </div>
                                     </div>
                                 </div>
@@ -151,31 +165,20 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <div class="col-sm-offset-2 col-sm-10">
-                                            <button type="submit" class="btn btn-danger pull-right">
-                                                {{'CONFIG.WIDGET.CANCEL'|translate}}
-                                            </button>
-                                            <button type="submit" ng-click="saveWgt()"
-                                                    class="btn btn-success pull-right"
-                                                    style="margin-right: 5px">{{'CONFIG.WIDGET.SAVE'|translate}}
-                                            </button>
-                                            <button type="submit" ng-click="previewQuery()"
-                                                    class="btn btn-success pull-right"
-                                                    style="margin-right: 5px">
-                                                {{'CONFIG.WIDGET.PREVIEW_QUERY'|translate}}
-                                            </button>
-                                            <button type="submit" ng-click="preview()"
-                                                    class="btn btn-success pull-right"
-                                                    style="margin-right: 5px">
-                                                {{'CONFIG.WIDGET.PREVIEW'|translate}}
-                                            </button>
+                                            <button type="submit" ng-click="preview()" class="btn btn-link">{{'CONFIG.WIDGET.PREVIEW'|translate}}</button>
+                                            <button type="submit" ng-click="previewQuery()" class="btn btn-link">{{'CONFIG.WIDGET.PREVIEW_QUERY'|translate}}</button>
+                                            <button type="submit" class="btn btn-link pull-right">{{'CONFIG.WIDGET.CANCEL'|translate}}</button>
+                                            <button type="submit" ng-click="saveWgt()" class="btn btn-link pull-right">{{'CONFIG.WIDGET.SAVE'|translate}}</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row" style="margin: 0px 0px;">
                                 <div class="col-md-{{previewDivWidth}} box box-solid">
-                                    <div ng-show="!viewQueryMoal" id="preview_widget" style="min-height: 300px; user-select: text;"></div>
-                                    <div ng-show="viewQueryMoal" id="viewQuery_widget" style="min-height: 300px; user-select: text;"></div>
+                                    <div ng-show="!viewQueryMoal" id="preview_widget"
+                                         style="min-height: 300px; user-select: text;"></div>
+                                    <div ng-show="viewQueryMoal" id="viewQuery_widget"
+                                         style="min-height: 300px; user-select: text;"></div>
                                     <div class="overlay fa box box-solid" ng-show="loadingPre">
                                         <div class="box-header with-border">
                                             <!--<h3 class="box-title"></h3>-->
