--- a/src/main/webapp/org/cboard/view/dashboard/layout/timeline.html
+++ b/src/main/webapp/org/cboard/view/dashboard/layout/timeline.html
@@ -6,7 +6,7 @@
     </h1>
     <div class="breadcrumb" style="cursor: pointer">
         <div style="display: inline-block">
-            <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown"><i class="fa fa-filter"></i> {{"COMMON.PARAM" | translate}}
+            <button type="button" class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown"><i class="fa fa-filter"></i> {{"COMMON.PARAM" | translate}}
                 <span class="fa fa-caret-down"></span>
             </button>
             <ul class="dropdown-menu" style="position: relative">
@@ -19,12 +19,12 @@
             </ul>
         </div>
         <div style="display: inline-block" ng-click="load(true)">
-            <button class="btn btn-primary btn-sm">
+            <button class="btn btn-link btn-sm">
                 <span><i class="fa fa-refresh"></i>&nbsp;{{"COMMON.REFRESH" | translate}}</span>
             </button>
         </div>
         <div style="display: inline-block" ng-click="export(true)">
-            <button class="btn btn-primary btn-sm">
+            <button class="btn btn-link btn-sm">
                 <span ng-show="!exportStatus"><i class="fa fa-download"></i>&nbsp;{{"COMMON.EXPORT" | translate}}</span>
                 <span ng-show="exportStatus"><i class="fa fa-spinner fa-spin"></i> Loading</span>
             </button>
