--- a/src/main/webapp/org/cboard/view/config/chart/table.html
+++ b/src/main/webapp/org/cboard/view/config/chart/table.html
@@ -67,10 +67,10 @@
                                        placeholder="{{'CONFIG.WIDGET.FORMATTER'|translate}}">
                             </li>
                             <li class="dropdown-submenu">
-                                <a tabindex="-1" href="#">Aggregate Type</a>
+                                <a tabindex="-1" href="#">{{'CONFIG.WIDGET.AGGREGATE_TYPE'|translate}}</a>
                                 <ul class="dropdown-menu">
                                     <li ng-repeat="a in value_aggregate_types">
-                                        <a ng-click="o.aggregate_type=a.value">{{a.name+'('+o.col+')'}}</a>
+                                        <a ng-click="o.aggregate_type=a.value">{{a.name}}</a>
                                     </li>
 
                                 </ul>
