--- a/src/main/webapp/org/cboard/view/config/chart/grid.html
+++ b/src/main/webapp/org/cboard/view/config/chart/grid.html
@@ -4,7 +4,7 @@
     <div class="col-sm-10">
         <div dnd-list="curWidget.config.values[0].cols"
              dnd-inserted="dndTransfer.toDetail(curWidget.config.values[0].cols,index,item,type)"
-             dnd-allowed-types="['measure','select','col','exp']"
+             dnd-allowed-types="['measure','select','col']"
              class="form-control" style="min-height: 35px;height: auto;padding: 0px">
             <div class="dndPlaceholder sort-highlight"
                  style="height: 24px; width: 93px;margin: 3px 3px;display: inline-block;vertical-align: middle;">
@@ -34,13 +34,21 @@
                                 <input type="text" class="input" ng-model="o.alias"
                                        placeholder="{{'CONFIG.WIDGET.ALIAS'|translate}}">
                             </li>
-                            <li>
-                                <a href="#" ng-click="editVFilter(o)">{{'CONFIG.WIDGET.FILTER'|translate}}</a>
-                            </li>
+                            <!--<li>-->
+                                <!--<a href="#" ng-click="editVFilter(o)">{{'CONFIG.WIDGET.FILTER'|translate}}</a>-->
+                            <!--</li>-->
                         </ul>
                     </div>
                 </ng-switch>
             </div>
+        </div>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-sm-2 control-label">TOP</label>
+    <div class="col-sm-10">
+        <div class="input-group" style="width: 100%;">
+            <input type="number" class="form-control" max="100000" min="0" step="10" ng-model="curWidget.config.top">
         </div>
     </div>
 </div>
